--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,29 @@
     animation: zoomBg 4s ease-in-out infinite alternate;
   }
 }
+
+
+/* button hover */
+.btn-hover::before {
+    content: '';
+    position: absolute;
+    top: 50%;          
+    left: 50%;        
+    width: 0;
+    height: 0;     
+    
+   
+    background: white; 
+    border-radius: 9999px; 
+    
+
+    transition: width 0.5s ease-out, height 0.9s ease-out;
+    transform: translate(-50%, -50%); 
+    z-index: -1;      
+}
+
+
+.btn-hover:hover::before {
+    width: 300%;  
+    height: 300%;
+}
